basic working app component

--- a/bin/index.html
+++ b/bin/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Boom!</h1>
+  <div id="root"></div>
 </body>
-<script src="app.bundle.js"></script>
+<script src="./public/app.bundle.js"></script>
 </html>
