projects on dashboard render

--- a/bin/index.html
+++ b/bin/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+      .projName {
+        font-size: large;
+      }
+      .projDesc {
+        font-size: small;
+      }
+      .projGitLink {
+        font-weight: bold;
+      }
+    </style>
 </head>
 <body>
   <div id="root"></div>
